syntax = "proto3";

package greet;

option go_package = "github.com/quistew/golang-microservices/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
}

// to compile: `protoc -Igreet/proto --go_out=. --go_opt=module=github.com/quistew/golang-microservices --go-grpc_out=. --go-grpc_opt=module=github.com/quistew/golang-microservices greet/proto/dummy.proto`